--- a/styles.css
+++ b/styles.css
@@ -46,3 +46,21 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
+header {
+    text-align: center; 
+    padding: 40px; 
+    font-family: sans-serif;
+}
+
+footer {
+    text-align: center; 
+    padding: 10px; 
+    font-family: sans-serif;
+    font-size: 8pt;
+}
+
+.main {
+    height: 500px;
+}
+
