--- a/styles.css
+++ b/styles.css
@@ -61,13 +61,13 @@ footer {
 }
 
 .main {
-    height: 500px;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-img{
+img {
     max-height:500px;
     max-width:500px;
     height:auto;
