--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,9 @@ table {
 	border-spacing: 0;
 }
 
+* {border:1pt solid red;}
+
+
 header {
     text-align: center; 
     padding: 40px; 
@@ -56,7 +59,7 @@ header {
 
 footer {
     text-align: center; 
-    padding: 10px; 
+    padding: 15px; 
     font-family: sans-serif;
     font-size: 8pt;
 }
@@ -78,6 +81,8 @@ img {
 carousel {
     display: flex;
     justify-content: center;
+    align-items: center;
+    height: 15vh;
 }
 
 carousel img {
