--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ header {
     text-align: center; 
     padding: 40px; 
     font-size: 24pt;
-    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: Josefin Sans, sans-serif;
 }
 
 footer {
